WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302133
[blocks-in-inline] Blocks don't get indented by line box shrinking floats
https://bugs.webkit.org/show_bug.cgi?id=302133
Summary
[blocks-in-inline] Blocks don't get indented by line box shrinking floats
alan
Reported
2025-11-06 16:36:54 PST
ssia
Attachments
Patch
(10.39 KB, patch)
2025-11-06 16:54 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(10.39 KB, patch)
2025-11-06 19:07 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-06 16:54:49 PST
Created
attachment 477325
[details]
Patch
alan
Comment 2
2025-11-06 19:07:30 PST
Created
attachment 477326
[details]
[fast-cq]Patch
EWS
Comment 3
2025-11-07 06:14:40 PST
Committed
302723@main
(fd20bee3e64e): <
https://commits.webkit.org/302723@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477326
[details]
.
Radar WebKit Bug Importer
Comment 4
2025-11-07 06:15:13 PST
<
rdar://problem/164251574
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug