[blocks-in-inline] Blocks don't get indented by line box shrinking floats https://bugs.webkit.org/show_bug.cgi?id=302133

Reviewed by Antti Koivisto.

Make sure blocks always start at the root content box edge.

- decouple initial line left and intrusive float offset
- adjust the visual left so that blocks are aligned with the content box edge

Test: fast/inline/blocks-in-inline-layout-8.html

* LayoutTests/fast/inline/blocks-in-inline-layout-8-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-8.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::adjustOutsideListMarkersPosition):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
* Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):

Canonical link: https://commits.webkit.org/302723@main