Source/WebCore/layout/formattingContexts/inline/LineLayoutResult.h
@@ -58,7 +58,8 @@ struct LineLayoutResult {
     struct LineGeometry {
         InlineLayoutPoint logicalTopLeft;
         InlineLayoutUnit logicalWidth { 0.f };
-        InlineLayoutUnit initialLogicalLeftIncludingIntrusiveFloats { 0.f };
+        InlineLayoutUnit initialLogicalLeft { 0.f };
+        InlineLayoutUnit intrusiveFloatsOffset { 0.f }; // Inherited floats from parent formatting context offseting line box.
         std::optional<InlineLayoutUnit> initialLetterClearGap { };
     };
     LineGeometry lineGeometry { };
